log
Thu 21 Mar 2024 01:17:09 AM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |      push_back(L, valor);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
a008f35
Thu 21 Mar 2024 01:17:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7bae982
Thu 21 Mar 2024 03:51:47 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4a32657
Thu 21 Mar 2024 03:55:03 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ec1e66d
Thu 21 Mar 2024 04:02:04 AM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
c2b6689
Thu 21 Mar 2024 04:02:44 AM UTC: 
 exercises.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:99:10: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
   99 |   Stack* pila_aux = create_stack();
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d9817b8
Thu 21 Mar 2024 04:02:49 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
19319ea
Thu 21 Mar 2024 08:05:41 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
b0f95de
Thu 21 Mar 2024 08:14:14 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
8a841dc
